--- a/style.css
+++ b/style.css
@@ -9,11 +9,17 @@ body {
 }
 
 p {
+  margin-top: 0;
   margin-bottom: 12px;
+}
+
+ul {
+  margin-top: 0;
 }
 
 h1, h2, h3 {
   font-weight: 400;
+  margin: 0;
 }
 
 h1 {
@@ -33,6 +39,14 @@ h3 {
 #header {
   margin-bottom: 32px;
   text-align: center;
+}
+
+.main_section {
+  margin-bottom: 24px;
+}
+
+.main_section_item {
+  margin-bottom: 16px;
 }
 
 #footer {
